# TomatoClock

./: .gitignore  README.md  build.py  pixi.toml  pyproject.toml  tomato.py
src/tomatoclock/: __main__.py  settings.py  storage.py
